src/main/devops/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-eureka-authentication
  labels:
    service: eureka-authentication
    app: hogarep
  namespace: default
spec:
  selector:
    matchLabels:
      service: eureka-authentication
      bd: mongo
  template:
    metadata:
      name: eureka-main-svc
      labels:
        service: eureka-authentication
        bd: mongo
    spec:
      containers:
        - name: eureka-authentication
          image: ${SVC_IMAGE}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: container-port
          resources:
            requests:
              cpu: 40m
              memory: 200Mi
            limits:
              memory: 600Mi
              cpu: "2"
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
      maxSurge: 50%
