src/main/devops/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-eureka-authentication
spec:
  type: NodePort
  ports:
    - targetPort: 8080
      port: 8080
  selector:
    service: eureka-authentication
    type: backend
