src/main/devops/service-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: eureka-service
spec:
  type: LoadBalancer
  ports:
    - targetPort: 8080
      port: 8080
  selector:
    app: test
    type: backend
