src/main/devops/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${SVC_NAME}
spec:
  type: NodePort
  ports:
    - targetPort: 8080
      port: 8080
  selector:
    service: jaipro-authentication
    type: backend
