src/main/devops/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-eureka-authentication
  labels:
    service: eureka-authentication
  namespace: default
spec:
  rules:
    - host: hogarep.com
      http:
        paths:
          - backend:
              service:
                name: svc-eureka-authentication
                port:
                  number: 8080
            path: SERVICE_INGRESS_CONTEXT_PATH
            pathType: Prefix
